# rs-atomic-state

./: Cargo.toml  README.md
examples/: atomic_flag.rs  atomic_state.rs  atomic_state_blocking.rs  test_flag.rs  test_state.rs
src/: lib.rs  prelude.rs
src/flag/: flag.rs  mod.rs
src/state/: guard.rs  mod.rs  state.rs
src/state copy/: guard.rs  mod.rs  reff.rs  state.rs
